# factory-thing

./: README.md
json-c/: Makefile  Makefile.in  aclocal.m4  config.h.in  config.status  configure  json-c-uninstalled.pc  json-c.pc  libtool
open62541_mqtt/: CMakeLists.txt  README.md  build-commands.txt
open62541_mqtt/include/: ua_config.h.in
open62541_mqtt/mqtt/: CMakeLists.txt  client-amqps-producer.c  client-browse.c  client-common.h  client-config.cpp  client-config.h  client-connection.c  client-main.cpp  client-monitoring.cpp  client-mqtt.c  client-nodeid.cpp  client-nodeid.h  client-nodemap.h  client-tcp.c  client-trans-tcp.cpp  client-trans-tcp.h  config.json  lepton.c  lepton.h  opcua-mqtt.c  pub.h  pub0sub1.c  server.c  transport.c
